crates/test-files/fixtures/compile_errors/invalid_struct_attribute.fe
struct Bar {
    #invalid
    id: u256
}